# chatgpt-course

./: README.md  pyproject.toml  session2_guidelines.py
