[tool.poetry]
name = "chatgpt-course"
version = "0.1.0"
description = ""
authors = ["Pamela Gotti <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
